--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_SERVICE_ID = 'service_flb61q3'
-VITE_TEMPLATE_ID = 'template_ydesf4y'
+VITE_REPLY_TEMPLATE_ID = 'template_bsryp51'
 VITE_PUBLIC_KEY = 'KOjB1JvwXBKB1Ek-F'
+VITE_TEMPLATE_ID='template_q1llckx' 
